--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background: url("./Screenshot\ \(1\).png");
 }
 
 .btn{
